feat: add developer documentation message to locale files

--- a/src/locales/de_DE.yml
+++ b/src/locales/de_DE.yml
@@ -19,6 +19,7 @@ back: Zurück
 allow: Erlauben
 goto_root: Zur Startseite
 create_account_short: Account erstellen
+developer_documentation: Entwicklerdokumentation
 
 # Content Strings
 strawberry_id_title: Ein Account - für alle Produkte von Strawberry Foundations
