feat: add 'my_profile' message to locale files

--- a/src/locales/de_DE.yml
+++ b/src/locales/de_DE.yml
@@ -18,8 +18,10 @@ str_continue: Weiter
 back: Zurück
 allow: Erlauben
 goto_root: Zur Startseite
+
 create_account_short: Account erstellen
 developer_documentation: Entwicklerdokumentation
+my_profile: Mein Profil
 
 # Content Strings
 strawberry_id_title: Ein Account - für alle Produkte von Strawberry Foundations
