--- a/src/locales/en_US.yml
+++ b/src/locales/en_US.yml
@@ -98,7 +98,8 @@ member: Member
 security_settings: Security settings
 two_factor_auth: Two-factor authentication
 enable_2fa: Enable 2FA
-setup_totp: Set up TOTP
+setup_totp: Set up 2FA
+totp_setup_success: 2FA has been successfully set up
 
 # Profile Settings
 profile_settings: Profile settings
