--- a/src/locales/de_DE.yml
+++ b/src/locales/de_DE.yml
@@ -99,11 +99,14 @@ member: Mitglied
 security_settings: Sicherheitseinstellungen
 two_factor_auth: Zwei-Faktor-Authentifizierung
 enable_2fa: 2FA aktivieren
+disable_2fa: 2FA deaktivieren
 setup_totp: 2FA einrichten
 totp_setup_success: 2FA wurde erfolgreich eingerichtet
 totp_enabled: 2FA ist aktiviert
 totp_disabled: 2FA ist deaktiviert
 totp_setup_failed: 2FA konnte nicht eingerichtet werden. Der eingebene Code ist falsch. Versuche es erneut.
+login_required: Anmeldung erforderlich
+totp_disable_failed: 2FA konnte nicht deaktiviert werden. Der eingegebene Code oder das Passwort ist falsch. Versuche es erneut.
 
 # Profile Settings
 profile_settings: Profileinstellungen
